# cyber_trader

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: backtest.yaml  backtest_15m.yaml  backtest_15m_btc.yaml  backtest_15m_mr.yaml  backtest_1h_mr.yaml  backtest_grid.yaml  backtest_ranging.yaml  live_trading.yaml  monitor.yaml  paper_trading.yaml
cyber_trader/: __init__.py
cyber_trader/config/: settings.py
cyber_trader/data/: __init__.py  aux_downloader.py  catalog.py  liq_heatmap.py  liquidation_downloader.py  okx_downloader.py
cyber_trader/engines/: __init__.py  backtest.py  live.py  paper.py
cyber_trader/indicators/: __init__.py  factor_engine.py
cyber_trader/monitors/: __init__.py  rules.py  volatility.py
cyber_trader/notifications/: __init__.py  bark.py  feishu.py
cyber_trader/risk/: __init__.py  manager.py
cyber_trader/strategies/: __init__.py  base.py  grid.py  mean_reversion.py  momentum.py  mr_15m.py  scalp_15m.py  trend_following.py
notebooks/: backtest_analysis.ipynb  eth_15m_chart.ipynb  eth_4h_chart.ipynb
scripts/: build_liq_heatmap.py  download_aux_data.py  download_data.py  download_liquidation.py  plot_kline.py  resample_bars.py  run_backtest.py  run_live.py  run_monitor.py  run_paper.py
tests/: test_data.py  test_factor_engine.py
